// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test TimeCountDown render TimeCountDown 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FAFAFA",
      "borderColor": "#E8E8E8",
      "borderRadius": 5,
      "borderWidth": 1,
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "marginTop": 10,
      "paddingVertical": 24,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "marginBottom": 8,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderRadius": 2,
            "elevation": 1,
            "height": 48,
            "marginRight": 4,
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 2,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 2,
            "width": 32,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#F5F5F5",
              "borderTopLeftRadius": 2,
              "borderTopRightRadius": 2,
              "height": 24,
              "position": "absolute",
              "width": 32,
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#E8E8E8",
              "borderBottomLeftRadius": 2,
              "borderBottomRightRadius": 2,
              "height": 24,
              "position": "absolute",
              "top": 24,
              "width": 32,
            }
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "SFProDisplay-Semibold",
                "fontSize": 24,
                "lineHeight": 32,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {
                "marginTop": 8,
                "textAlign": "center",
                "width": 32,
              },
            ]
          }
          testID="TIME_COUNT_DOWN_TEXT"
        >
          0
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderRadius": 2,
            "elevation": 1,
            "height": 48,
            "marginRight": 4,
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 2,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 2,
            "width": 32,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#F5F5F5",
              "borderTopLeftRadius": 2,
              "borderTopRightRadius": 2,
              "height": 24,
              "position": "absolute",
              "width": 32,
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#E8E8E8",
              "borderBottomLeftRadius": 2,
              "borderBottomRightRadius": 2,
              "height": 24,
              "position": "absolute",
              "top": 24,
              "width": 32,
            }
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "SFProDisplay-Semibold",
                "fontSize": 24,
                "lineHeight": 32,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {
                "marginTop": 8,
                "textAlign": "center",
                "width": 32,
              },
            ]
          }
          testID="TIME_COUNT_DOWN_TEXT"
        >
          1
        </Text>
      </View>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#595959",
            "fontFamily": "SFProDisplay-Regular",
            "fontSize": 14,
            "lineHeight": 22,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
          Object {},
        ]
      }
    >
      [missing "en.hour" translation]
    </Text>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "fontFamily": "SFProDisplay-Semibold",
          "fontSize": 24,
          "lineHeight": 32,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {
          "marginLeft": 4,
          "marginRight": 8,
          "marginTop": 8,
        },
      ]
    }
  >
    :
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "marginBottom": 8,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderRadius": 2,
            "elevation": 1,
            "height": 48,
            "marginRight": 4,
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 2,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 2,
            "width": 32,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#F5F5F5",
              "borderTopLeftRadius": 2,
              "borderTopRightRadius": 2,
              "height": 24,
              "position": "absolute",
              "width": 32,
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#E8E8E8",
              "borderBottomLeftRadius": 2,
              "borderBottomRightRadius": 2,
              "height": 24,
              "position": "absolute",
              "top": 24,
              "width": 32,
            }
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "SFProDisplay-Semibold",
                "fontSize": 24,
                "lineHeight": 32,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {
                "marginTop": 8,
                "textAlign": "center",
                "width": 32,
              },
            ]
          }
          testID="TIME_COUNT_DOWN_TEXT"
        >
          4
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderRadius": 2,
            "elevation": 1,
            "height": 48,
            "marginRight": 4,
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 2,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 2,
            "width": 32,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#F5F5F5",
              "borderTopLeftRadius": 2,
              "borderTopRightRadius": 2,
              "height": 24,
              "position": "absolute",
              "width": 32,
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#E8E8E8",
              "borderBottomLeftRadius": 2,
              "borderBottomRightRadius": 2,
              "height": 24,
              "position": "absolute",
              "top": 24,
              "width": 32,
            }
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "SFProDisplay-Semibold",
                "fontSize": 24,
                "lineHeight": 32,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {
                "marginTop": 8,
                "textAlign": "center",
                "width": 32,
              },
            ]
          }
          testID="TIME_COUNT_DOWN_TEXT"
        >
          9
        </Text>
      </View>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#595959",
            "fontFamily": "SFProDisplay-Regular",
            "fontSize": 14,
            "lineHeight": 22,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
          Object {},
        ]
      }
    >
      [missing "en.minute" translation]
    </Text>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "fontFamily": "SFProDisplay-Semibold",
          "fontSize": 24,
          "lineHeight": 32,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {
          "marginLeft": 4,
          "marginRight": 8,
          "marginTop": 8,
        },
      ]
    }
  >
    :
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "marginBottom": 8,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderRadius": 2,
            "elevation": 1,
            "height": 48,
            "marginRight": 4,
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 2,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 2,
            "width": 32,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#F5F5F5",
              "borderTopLeftRadius": 2,
              "borderTopRightRadius": 2,
              "height": 24,
              "position": "absolute",
              "width": 32,
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#E8E8E8",
              "borderBottomLeftRadius": 2,
              "borderBottomRightRadius": 2,
              "height": 24,
              "position": "absolute",
              "top": 24,
              "width": 32,
            }
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "SFProDisplay-Semibold",
                "fontSize": 24,
                "lineHeight": 32,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {
                "marginTop": 8,
                "textAlign": "center",
                "width": 32,
              },
            ]
          }
          testID="TIME_COUNT_DOWN_TEXT"
        >
          2
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderRadius": 2,
            "elevation": 1,
            "height": 48,
            "marginRight": 4,
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 2,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 2,
            "width": 32,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#F5F5F5",
              "borderTopLeftRadius": 2,
              "borderTopRightRadius": 2,
              "height": 24,
              "position": "absolute",
              "width": 32,
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#E8E8E8",
              "borderBottomLeftRadius": 2,
              "borderBottomRightRadius": 2,
              "height": 24,
              "position": "absolute",
              "top": 24,
              "width": 32,
            }
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#000000",
                "fontFamily": "SFProDisplay-Semibold",
                "fontSize": 24,
                "lineHeight": 32,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {
                "marginTop": 8,
                "textAlign": "center",
                "width": 32,
              },
            ]
          }
          testID="TIME_COUNT_DOWN_TEXT"
        >
          2
        </Text>
      </View>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#595959",
            "fontFamily": "SFProDisplay-Regular",
            "fontSize": 14,
            "lineHeight": 22,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
          Object {},
        ]
      }
    >
      [missing "en.second" translation]
    </Text>
  </View>
</View>
`;

exports[`Test TimeCountDown render TimeCountDown timeLeft < 15 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FAFAFA",
      "borderColor": "#E8E8E8",
      "borderRadius": 5,
      "borderWidth": 1,
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "center",
      "marginTop": 10,
      "paddingVertical": 24,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "marginBottom": 8,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderRadius": 2,
            "elevation": 1,
            "height": 48,
            "marginRight": 4,
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 2,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 2,
            "width": 32,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#F5F5F5",
              "borderTopLeftRadius": 2,
              "borderTopRightRadius": 2,
              "height": 24,
              "position": "absolute",
              "width": 32,
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#E8E8E8",
              "borderBottomLeftRadius": 2,
              "borderBottomRightRadius": 2,
              "height": 24,
              "position": "absolute",
              "top": 24,
              "width": 32,
            }
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#F5222D",
                "fontFamily": "SFProDisplay-Semibold",
                "fontSize": 24,
                "lineHeight": 32,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {
                "marginTop": 8,
                "textAlign": "center",
                "width": 32,
              },
            ]
          }
          testID="TIME_COUNT_DOWN_TEXT"
        >
          0
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderRadius": 2,
            "elevation": 1,
            "height": 48,
            "marginRight": 4,
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 2,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 2,
            "width": 32,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#F5F5F5",
              "borderTopLeftRadius": 2,
              "borderTopRightRadius": 2,
              "height": 24,
              "position": "absolute",
              "width": 32,
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#E8E8E8",
              "borderBottomLeftRadius": 2,
              "borderBottomRightRadius": 2,
              "height": 24,
              "position": "absolute",
              "top": 24,
              "width": 32,
            }
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#F5222D",
                "fontFamily": "SFProDisplay-Semibold",
                "fontSize": 24,
                "lineHeight": 32,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {
                "marginTop": 8,
                "textAlign": "center",
                "width": 32,
              },
            ]
          }
          testID="TIME_COUNT_DOWN_TEXT"
        >
          0
        </Text>
      </View>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#595959",
            "fontFamily": "SFProDisplay-Regular",
            "fontSize": 14,
            "lineHeight": 22,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
          Object {},
        ]
      }
    >
      [missing "en.hour" translation]
    </Text>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "fontFamily": "SFProDisplay-Semibold",
          "fontSize": 24,
          "lineHeight": 32,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {
          "marginLeft": 4,
          "marginRight": 8,
          "marginTop": 8,
        },
      ]
    }
  >
    :
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "marginBottom": 8,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderRadius": 2,
            "elevation": 1,
            "height": 48,
            "marginRight": 4,
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 2,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 2,
            "width": 32,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#F5F5F5",
              "borderTopLeftRadius": 2,
              "borderTopRightRadius": 2,
              "height": 24,
              "position": "absolute",
              "width": 32,
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#E8E8E8",
              "borderBottomLeftRadius": 2,
              "borderBottomRightRadius": 2,
              "height": 24,
              "position": "absolute",
              "top": 24,
              "width": 32,
            }
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#F5222D",
                "fontFamily": "SFProDisplay-Semibold",
                "fontSize": 24,
                "lineHeight": 32,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {
                "marginTop": 8,
                "textAlign": "center",
                "width": 32,
              },
            ]
          }
          testID="TIME_COUNT_DOWN_TEXT"
        >
          0
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderRadius": 2,
            "elevation": 1,
            "height": 48,
            "marginRight": 4,
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 2,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 2,
            "width": 32,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#F5F5F5",
              "borderTopLeftRadius": 2,
              "borderTopRightRadius": 2,
              "height": 24,
              "position": "absolute",
              "width": 32,
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#E8E8E8",
              "borderBottomLeftRadius": 2,
              "borderBottomRightRadius": 2,
              "height": 24,
              "position": "absolute",
              "top": 24,
              "width": 32,
            }
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#F5222D",
                "fontFamily": "SFProDisplay-Semibold",
                "fontSize": 24,
                "lineHeight": 32,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {
                "marginTop": 8,
                "textAlign": "center",
                "width": 32,
              },
            ]
          }
          testID="TIME_COUNT_DOWN_TEXT"
        >
          2
        </Text>
      </View>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#595959",
            "fontFamily": "SFProDisplay-Regular",
            "fontSize": 14,
            "lineHeight": 22,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
          Object {},
        ]
      }
    >
      [missing "en.minute" translation]
    </Text>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "fontFamily": "SFProDisplay-Semibold",
          "fontSize": 24,
          "lineHeight": 32,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {
          "marginLeft": 4,
          "marginRight": 8,
          "marginTop": 8,
        },
      ]
    }
  >
    :
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "marginBottom": 8,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "borderRadius": 2,
            "elevation": 1,
            "height": 48,
            "marginRight": 4,
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 2,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 2,
            "width": 32,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#F5F5F5",
              "borderTopLeftRadius": 2,
              "borderTopRightRadius": 2,
              "height": 24,
              "position": "absolute",
              "width": 32,
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#E8E8E8",
              "borderBottomLeftRadius": 2,
              "borderBottomRightRadius": 2,
              "height": 24,
              "position": "absolute",
              "top": 24,
              "width": 32,
            }
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#F5222D",
                "fontFamily": "SFProDisplay-Semibold",
                "fontSize": 24,
                "lineHeight": 32,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {
                "marginTop": 8,
                "textAlign": "center",
                "width": 32,
              },
            ]
          }
          testID="TIME_COUNT_DOWN_TEXT"
        >
          2
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderRadius": 2,
            "elevation": 1,
            "height": 48,
            "marginRight": 4,
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 2,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 2,
            "width": 32,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#F5F5F5",
              "borderTopLeftRadius": 2,
              "borderTopRightRadius": 2,
              "height": 24,
              "position": "absolute",
              "width": 32,
            }
          }
        />
        <View
          style={
            Object {
              "backgroundColor": "#E8E8E8",
              "borderBottomLeftRadius": 2,
              "borderBottomRightRadius": 2,
              "height": 24,
              "position": "absolute",
              "top": 24,
              "width": 32,
            }
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#F5222D",
                "fontFamily": "SFProDisplay-Semibold",
                "fontSize": 24,
                "lineHeight": 32,
                "textAlign": "left",
                "textDecorationLine": "none",
              },
              Object {
                "marginTop": 8,
                "textAlign": "center",
                "width": 32,
              },
            ]
          }
          testID="TIME_COUNT_DOWN_TEXT"
        >
          2
        </Text>
      </View>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#595959",
            "fontFamily": "SFProDisplay-Regular",
            "fontSize": 14,
            "lineHeight": 22,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
          Object {},
        ]
      }
    >
      [missing "en.second" translation]
    </Text>
  </View>
</View>
`;
